# sudoku_solver

./: Cargo.toml  Dioxus.toml  README.md  index.html
docs/: app.css
docs/assets/dioxus/: sudoku_solver.js  sudoku_solver_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
src/: lib.rs  main.rs  solver.rs
